--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.5.4
-
+  
 
 
 
@@ -37,11 +37,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.1.8
   
+  dots_indicator: ^2.0.0
+  flutter_svg: ^1.0.0
+  fluttertoast: ^8.0.9
+  
+  webview_flutter: ^4.8.0
+  url_launcher: ^6.1.8
+
+  webview_flutter_web: ^0.2.2
+  particles_flutter: ^0.1.4
+  font_awesome_flutter: ^10.7.0
+  flutter_animate: ^4.5.0
+
+  flutter_secure_storage: ^9.2.2
+  
+  speech_to_text: ^7.0.0
+  flutter_tts: ^3.5.0
 
  
-  font_awesome_flutter: ^10.4.0 
+
   http: ^1.2.2 
   intl:
   shared_preferences: ^2.3.4
@@ -57,7 +72,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   page_transition: ^2.1.0
 
-
+ 
 
 dev_dependencies:
   flutter_test:
@@ -86,7 +101,7 @@ flutter:
   assets:
   
    
-  
+   - assets/logoo.jpg
    - assets/ll.jpg
    - assets/versee.jpg
    - assets/cal.jpeg
@@ -99,7 +114,6 @@ flutter:
    - assets/a.jpg
    - assets/c.jpg
    - assets/bible.jpg
-   - assets/pr.jpg
    - assets/chuu.jpg
    - assets/joyforeternity.mp3
    - assets/forgive.mp3
@@ -108,8 +122,12 @@ flutter:
    - assets/henok.jpg
    - assets/nehm.jpg
    - assets/abeni.jpg
+   - assets/kaleb.jpg
    - assets/dagim.jpg
+   - assets/m.jpg
    - assets/wel.jpg
+   - assets/biblical.jpg
+   
 
      # Make sure your audio file is listed here
 
