--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^1.0.0
   fluttertoast: ^8.0.9
   
+  device_info_plus: ^9.1.2
   webview_flutter: ^4.8.0
   url_launcher: ^6.1.8
 
@@ -71,6 +72,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   page_transition: ^2.1.0
+  platform_device_id: ^1.0.1
 
  
 
